--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('~primeng/resources/primeng.min.css'); 
+@import url('~primeng/resources/themes/lara-light-blue/theme.css'); 
+
+html, body { height: 100%; }
